C++_STL/compiling_error.txt
/Users/chiranjeev/Documents/C_and_Cpp/C++_STL/Set.cpp:13:14: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
   for(int x : S)
             ^
/Users/chiranjeev/Documents/C_and_Cpp/C++_STL/Set.cpp:17:1: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
auto it = S.find(-1);
^
/Users/chiranjeev/Documents/C_and_Cpp/C++_STL/Set.cpp:27:1: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
auto it2 = upper_bound(-1);// will return 1
^
/Users/chiranjeev/Documents/C_and_Cpp/C++_STL/Set.cpp:27:12: error: no matching function for call to 'upper_bound'
auto it2 = upper_bound(-1);// will return 1
           ^~~~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4347:1: note: candidate function template not viable: requires 4 arguments, but 1 was provided
upper_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_, _Compare __comp)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4362:1: note: candidate function template not viable: requires 3 arguments, but 1 was provided
upper_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_)
^
/Users/chiranjeev/Documents/C_and_Cpp/C++_STL/Set.cpp:28:1: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
auto it3 = upper_bound(0);// will return 1
^
/Users/chiranjeev/Documents/C_and_Cpp/C++_STL/Set.cpp:28:12: error: no matching function for call to 'upper_bound'
auto it3 = upper_bound(0);// will return 1
           ^~~~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4347:1: note: candidate function template not viable: requires 4 arguments, but 1 was provided
upper_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_, _Compare __comp)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:4362:1: note: candidate function template not viable: requires 3 arguments, but 1 was provided
upper_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_)
^
4 warnings and 2 errors generated.
